[package]
name = "envor"
version = "0.1.5"
authors = [ "hyperchessbot <hyperchessbot@gmail.com>",]
edition = "2018"
keywords = [ "env", "var", "typed", "default",]
description = "Get env vars to types with default."
license = "MIT"
repository = "https://github.com/hyperchessbot/envor"
homepage = "https://github.com/hyperchessbot/envor#envor"
documentation = "https://docs.rs/envor/0.1.5"
readme = "ReadMe.md"

[dependencies]
dotenv = "0.15.0"

[lib]
path = "src/lib.rs"
